--- a/uam/docker-compose.yml
+++ b/uam/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: uam
     hostname: uam
     restart: always
+    ulimits:
+      memlock: -1
     cap_add:
       - NET_ADMIN
     volumes:
