--- a/uam-swarm/1-test-docker-compose.yml
+++ b/uam-swarm/1-test-docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ulimits:
       memlock: -1
     volumes:
-      - "./entrypoint.sh:/opt/entrypoint.sh"
-    command: /bin/sh -c "chmod +x /opt/entrypoint.sh && /opt/entrypoint.sh $${PBKEY}"
+      - "./entrypoint_test.sh:/opt/entrypoint.sh"
+    command: /bin/sh -c "chmod +x /opt/entrypoint_test.sh && /opt/entrypoint.sh $${PBKEY}"
     environment:
       - PBKEY=${PBKEY}
